--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,8 @@
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
 default: &default
-  adapter: mysql2
-  encoding: utf8
+  adapter: mysql2  #mysql2 に接続することを明示
+  encoding: utf8  #文字コードは utf8 で接続
   pool: 5
   username: root
   password:
